Update works info.

--- a/gem.html
+++ b/gem.html
@@ -42,7 +42,7 @@ http://opensource.org/licenses/mit-license.php
 	<body>
 
 		<div id="info">
-			<a href="http://threejs.org" target="_blank">three.js</a> - webgl Raytracing example -
+			<a href="http://threejs.org" target="_blank">three.js</a> - webgl raytracing example -
 			gem by <a href="https://github.com/gam0022" target="_blank">gam0022</a> (<a href="http://qiita.com/gam0022/items/9875480d33e03fe2113c" target="_blank">article in Japanese</a>)
 		</div>
 
