--- a/shadow.html
+++ b/shadow.html
@@ -42,7 +42,7 @@ http://opensource.org/licenses/mit-license.php
 	<body>
 
 		<div id="info">
-			<a href="http://threejs.org" target="_blank">three.js</a> - webgl raymarching example -
+			<a href="http://threejs.org" target="_blank">three.js</a> - webgl raymarching (soft|hard)shadow example -
 			shadow by <a href="https://github.com/gam0022" target="_blank">gam0022</a> (<a href="http://qiita.com/gam0022/items/03699a07e4a4b5f2d41f" target="_blank">article in Japanese</a>)
 		</div>
 
