--- a/index.html
+++ b/index.html
@@ -85,5 +85,37 @@
 	<script src="./bootstrap/bootstrap.min.js"></script>
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 	<script src="./bootstrap/ie10-viewport-bug-workaround.js"></script>
+	<script>
+
+	var panel = document.getElementById( 'panel' );
+	var content = document.getElementById( 'content' );
+	var viewer = document.getElementById( 'viewer' );
+
+	var links = {};
+	var selected = null;
+
+	var load = function ( file ) {
+
+		if ( selected !== null ) links[ selected ].className = 'link';
+
+		links[ file ].className = 'link selected';
+
+		window.location.hash = file;
+		viewer.src = file + '.html';
+		viewer.focus();
+
+		button.style.display = '';
+
+		selected = file;
+
+	};
+
+	if ( window.location.hash !== '' ) {
+
+		load( window.location.hash.substring( 1 ) );
+
+	}
+
+	</script>
 	
 </body></html>
