--- a/index.html
+++ b/index.html
@@ -1,89 +1,302 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<meta name="description" content="WebGL 実験場">
-	<meta name="author" content="gam0022">
-	<link rel="icon" href="/favicon.png">
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>three.js / examples</title>
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<style>
 
-	<title>WebGL 実験場 - gam0022.net</title>
+			@font-face {
+				font-family: 'inconsolata';
+				src: url('files/inconsolata.woff') format('woff');
+				font-weight: normal;
+				font-style: normal;
+			}
 
-	<!-- Bootstrap core CSS -->
-	<link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
+			* {
+				box-sizing: border-box;
+			}
 
-	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	<link href="./bootstrap/ie10-viewport-bug-workaround.css" rel="stylesheet">
+			html {
+				height: 100%;
+			}
 
-	<!-- Custom styles for this template -->
-	<link href="./bootstrap/starter-template.css" rel="stylesheet">
+			body {
+				background-color: #ffffff;
+				margin: 0px;
+				height: 100%;
+				color: #555;
+				font-family: 'inconsolata';
+				font-size: 15px;
+				line-height: 18px;
+				overflow: hidden;
+			}
 
-	<!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-	<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-	<script src="./bootstrap/ie-emulation-modes-warning.js"></script>
+			h1 {
+				margin-top: 30px;
+				margin-bottom: 40px;
+				margin-left: 20px;
+				font-size: 25px;
+				font-weight: normal;
+			}
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-	<style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
-		.en-markup-crop-options {
-			top: 18px !important;
-			left: 50% !important;
-			margin-left: -100px !important;
-			width: 200px !important;
-			border: 2px rgba(255,255,255,.38) solid !important;
-			border-radius: 4px !important;
-		}
-		
-		.en-markup-crop-options div div:first-of-type {
-			margin-left: 0px !important;
-		}
-	</style></head>
+			h2 {
+				font-size: 20px;
+				font-weight: normal;
+			}
 
+			a {
+				color: #2194CE;
+				text-decoration: none;
+			}
+
+			#panel {
+				position: fixed;
+				left: 0px;
+				width: 310px;
+				height: 100%;
+				overflow: auto;
+				background: #fafafa;
+			}
+
+				#panel #content {
+					padding: 0px 20px;
+				}
+
+				#panel #content .link {
+					color: #2194CE;
+					text-decoration: none;
+					cursor: pointer;
+					display: block;
+				}
+
+				#panel #content .selected {
+					color: #ff0000;
+				}
+
+					#panel #content .link:hover {
+						text-decoration: underline;
+					}
+
+			#viewer {
+				position: absolute;
+				border: 0px;
+				left: 310px;
+				width: calc(100% - 310px);
+				height: 100%;
+				overflow: auto;
+			}
+
+			#button {
+				position: fixed;
+				bottom: 20px;
+				right: 20px;
+				padding: 8px;
+				color: #fff;
+				background-color: #555;
+				opacity: 0.7;
+			}
+
+				#button:hover {
+					cursor: pointer;
+					opacity: 1;
+				}
+
+			/* mobile */
+
+			#expandButton {
+				display: none;
+				position: absolute;
+				right: 20px;
+				top: 12px;
+				width: 32px;
+				height: 32px;
+			}
+
+				#expandButton span {
+					height: 2px;
+					background-color: #2194CE;
+					width: 16px;
+					position: absolute;
+					left: 8px;
+					top: 10px;
+				}
+
+				#expandButton span:nth-child(1) {
+					top: 16px;
+				}
+
+				#expandButton span:nth-child(2) {
+					top: 22px;
+				}
+
+			@media all and ( max-width: 640px ) {
+				h1{
+					margin-top: 20px;
+					margin-bottom: 20px;
+				}
+				#panel{
+					position: absolute;
+					left: 0;
+					top: 0;
+					height: 480px;
+					width: 100%;
+					right: 0;
+					z-index: 100;
+					overflow: hidden;
+					border-bottom: 1px solid #dedede;
+				}
+				#content{
+					position: absolute;
+					left: 0;
+					top: 60px;
+					right: 0;
+					bottom: 0;
+					font-size: 17px;
+					line-height: 22px;
+					overflow: auto;
+				}
+				#viewer{
+					position: absolute;
+					left: 0;
+					top: 56px;
+					width: 100%;
+					height: calc(100% - 56px);
+				}
+				#expandButton{
+					display: block;
+				}
+				#panel.collapsed{
+					height: 56px;
+				}
+			}
+
+		</style>
+	</head>
 	<body>
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="./">WebGL sandbox</a>
+		<div id="panel" class="collapsed">
+			<h1><a href="http://threejs.org">three.js</a> / examples</h1>
+			<a id="expandButton" href="#">
+				<span></span>
+				<span></span>
+				<span></span>
+			</a>
+			<div id="content"></div>
 		</div>
-		<div id="navbar" class="collapse navbar-collapse">
-			<ul class="nav navbar-nav" id="works">
-			<li><a href="shadow.html" target="viewer">shadow</a></li>
-			<li><a href="carbon.html" target="viewer">carbon</a></li>
-			<li><a href="gem.html" target="viewer">gem</a></li>
-			<li><a href="reflect.html" target="viewer">reflect</a></li>
-			<li><a href="steel_frame.html" target="viewer">steel_frame</a></li>
-			</ul>
+		<iframe id="viewer" allowfullscreen onmousewheel=""></iframe>
 
-			<ul class="nav navbar-nav navbar-right">
-			<li role="separator" class="divider"></li>
-			<li><a href="/">Retrun to gam0022.net</a></li>
-			</ul>
-			</ul>
-		</div><!--/.nav-collapse -->
-		</div>
-	</nav>
+		<script src="files.js"></script>
+		<script>
 
+		var panel = document.getElementById( 'panel' );
+		var content = document.getElementById( 'content' );
+		var viewer = document.getElementById( 'viewer' );
 
-	<iframe id="viewer" name="viewer" allowfullscreen onmousewheel="" src="reflect.html"></iframe>
+		var expandButton = document.getElementById( 'expandButton' );
+		expandButton.addEventListener( 'click', function ( event ) {
+			panel.classList.toggle( 'collapsed' );
+			event.preventDefault();
+		} );
 
-	<!-- Bootstrap core JavaScript
-	================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="./bootstrap/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-	<script src="./bootstrap/bootstrap.min.js"></script>
-	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	<script src="./bootstrap/ie10-viewport-bug-workaround.js"></script>
-	
-</body></html>
+		// iOS8 workaround
+
+		if ( /(iPad|iPhone|iPod)/g.test( navigator.userAgent ) ) {
+
+			viewer.addEventListener( 'load', function ( event ) {
+
+				viewer.contentWindow.innerWidth -= 10;
+				viewer.contentWindow.innerHeight -= 2;
+
+			} );
+
+		}
+
+		var container = document.createElement( 'div' );
+		content.appendChild( container );
+
+		var button = document.createElement( 'div' );
+		button.id = 'button';
+		button.textContent = 'View source';
+		button.addEventListener( 'click', function ( event ) {
+
+			var array = location.href.split( '/' );
+			array.pop();
+
+			window.open( 'view-source:' + array.join( '/' ) + '/' + selected + '.html' );
+
+		}, false );
+		button.style.display = 'none';
+		document.body.appendChild( button );
+
+		var links = {};
+		var selected = null;
+
+		for ( var key in files ) {
+
+			var section = files[ key ];
+
+			var div = document.createElement( 'h2' );
+			div.textContent = key;
+			container.appendChild( div );
+
+			for ( var i = 0; i < section.length; i ++ ) {
+
+				( function ( file ) {
+
+					var name = file.split( '_' );
+					name.shift();
+					name = name.join( ' / ' );
+
+					var link = document.createElement( 'a' );
+					link.className = 'link';
+					link.textContent = name;
+					link.href = "#" + file;
+					link.addEventListener( 'click', function ( event ) {
+
+						if ( event.button === 0 ) {
+
+							event.preventDefault();
+
+							panel.classList.toggle( 'collapsed' );
+							load( file );
+
+						}
+
+					} );
+					container.appendChild( link );
+
+					links[ file ] = link;
+
+				} )( section[ i ] );
+
+			}
+
+		}
+
+		var load = function ( file ) {
+
+			if ( selected !== null ) links[ selected ].className = 'link';
+
+			links[ file ].className = 'link selected';
+
+			window.location.hash = file;
+			viewer.src = file + '.html';
+			viewer.focus();
+
+			button.style.display = '';
+
+			selected = file;
+
+		};
+
+		if ( window.location.hash !== '' ) {
+
+			load( window.location.hash.substring( 1 ) );
+
+		}
+
+		</script>
+
+	</body>
+</html>
