--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>three.js / examples</title>
+		<title>gam0022.net / webgl-sandbox</title>
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
 
@@ -36,7 +36,7 @@
 				margin-top: 30px;
 				margin-bottom: 40px;
 				margin-left: 20px;
-				font-size: 25px;
+				font-size: 22px;
 				font-weight: normal;
 			}
 
@@ -48,6 +48,10 @@
 			a {
 				color: #2194CE;
 				text-decoration: none;
+			}
+
+			a.root {
+				font-size: 13px;
 			}
 
 			#panel {
@@ -176,7 +180,7 @@
 	<body>
 
 		<div id="panel" class="collapsed">
-			<h1><a href="http://threejs.org">three.js</a> / examples</h1>
+			<h1><a href="http://gam0022.net" class="root">gam0022.net</a> / webgl-sandbox</h1>
 			<a id="expandButton" href="#">
 				<span></span>
 				<span></span>
