Mod h1 font-size

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				margin-top: 30px;
 				margin-bottom: 40px;
 				margin-left: 20px;
-				font-size: 22px;
+				font-size: 18px;
 				font-weight: normal;
 			}
 
@@ -48,10 +48,6 @@
 			a {
 				color: #2194CE;
 				text-decoration: none;
-			}
-
-			a.root {
-				font-size: 13px;
 			}
 
 			#panel {
@@ -180,7 +176,7 @@
 	<body>
 
 		<div id="panel" class="collapsed">
-			<h1><a href="http://gam0022.net" class="root">gam0022.net</a> / webgl-sandbox</h1>
+			<h1><a href="http://gam0022.net">gam0022.net</a> / webgl-sandbox</h1>
 			<a id="expandButton" href="#">
 				<span></span>
 				<span></span>
