--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js / examples</title>
+		<title>gam0022.net / webgl-sandbox</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -36,7 +36,7 @@
 				margin-top: 30px;
 				margin-bottom: 40px;
 				margin-left: 20px;
-				font-size: 25px;
+				font-size: 18px;
 				font-weight: normal;
 			}
 
@@ -225,7 +225,7 @@
 	<body>
 
 		<div id="panel" class="collapsed">
-			<h1><a href="http://threejs.org">three.js</a> / examples</h1>
+			<h1><a href="http://gam0022.net">gam0022.net</a> / webgl-sandbox</h1>
 			<a id="expandButton" href="#">
 				<span></span>
 				<span></span>
