--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 		button.textContent = 'View source';
 		button.addEventListener( 'click', function ( event ) {
 
-			window.open( 'https://github.com/mrdoob/three.js/blob/master/examples/' + selected + '.html' );
+			window.open( 'https://github.com/gam0022/webgl-sandbox/blob/master/' + selected + '.html' );
 
 		}, false );
 		button.style.display = 'none';
