Set precision highp float to shadow.

--- a/raymarching_shadow.html
+++ b/raymarching_shadow.html
@@ -48,9 +48,7 @@ http://opensource.org/licenses/mit-license.php
 
 		<script id="fragment_shader" type="x-shader/x-fragment">
 
-#ifdef GL_ES
-precision mediump float;
-#endif
+precision highp float;
 
 // uniforms
 uniform float time;
