--- a/raymarching_shadow.html
+++ b/raymarching_shadow.html
@@ -43,7 +43,7 @@ http://opensource.org/licenses/mit-license.php
 
 		<div id="info">
 			<a href="http://threejs.org" target="_blank">three.js</a> - webgl raymarching (soft|hard)shadow example -
-			shadow by <a href="https://github.com/gam0022" target="_blank">gam0022</a> (<a href="http://qiita.com/gam0022/items/03699a07e4a4b5f2d41f" target="_blank">article in Japanese</a>)
+			shadow by <a href="https://github.com/gam0022" target="_blank">gam0022</a> (<a href="https://speakerdeck.com/gam0022/reimatingudesohutosiyadou" target="_blank">article in Japanese</a>)
 		</div>
 
 		<script id="fragment_shader" type="x-shader/x-fragment">
