--- a/raymarching_hybrid.html
+++ b/raymarching_hybrid.html
@@ -320,7 +320,7 @@ void main(void) {
 	vec3 ray = normalize( cSide * p.x + cUp * p.y + cDir * targetDepth );
 
 	vec3 color = vec3( 0.0 );
-	float depth;
+	float depth = 1.0;
 	float alpha = 1.0;
 	Intersect nearest;
 
