--- a/raymarching_hybrid.html
+++ b/raymarching_hybrid.html
@@ -613,7 +613,7 @@ void main(void) {
 
 				if ( mesh ) {
 
-					helper.animate( clock.getDelta() );
+					helper.animate( delta );
 					helper.render( scene, camera );
 
 				} else {
