--- a/raymarching_hybrid.html
+++ b/raymarching_hybrid.html
@@ -44,8 +44,8 @@ uniform vec2 mouse;
 uniform vec2 resolution;
 
 // camera
-uniform mat4 viewMatrix;
-uniform vec3 cameraPosition;
+uniform mat4 cameraWorldMatrix;
+uniform mat4 cameraProjectionMatrixInverse;
 
 // debug for camera
 uniform bool debugCamera;
@@ -326,7 +326,9 @@ void main(void) {
 	// invView = cameraModel = camera.matrixWorld
 	// invProjection = inverse( camera.projectionMatrix )
 	// ワールド座標系でのレイの先端 =  invView * invProjection * (スクリーンの正規化xy, 1.0)
-	vec3 ray = normalize( cSide * p.x + cUp * p.y + cDir * targetDepth );
+	// vec3 ray = normalize( cSide * p.x + cUp * p.y + cDir * targetDepth );
+	vec4 rayTip = cameraWorldMatrix * cameraProjectionMatrixInverse * vec4( q.xy, 1.0, 1.0 );
+	vec3 ray = normalize( rayTip.xyz );
 
 	vec3 color = vec3( 0.0 );
 	float depth = 1.0;
@@ -475,7 +477,6 @@ void main(void) {
 						mouse: { type: 'v2', value: mouse },
 						time: { type: 'f', value: 0.0 },
 
-
 						cameraWorldMatrix: { type: 'm4', value: camera.matrixWorld },
 						cameraProjectionMatrixInverse: { type: 'm4', value: new THREE.Matrix4().getInverse( camera.projectionMatrix ) },
 
@@ -606,6 +607,10 @@ void main(void) {
 				material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
 				material.uniforms.mouse.value = mouse;
 				material.uniforms.time.value = timestamp * 0.001;
+
+				material.uniforms.cameraWorldMatrix.value = camera.matrixWorld;
+				material.uniforms.cameraProjectionMatrixInverse.value = new THREE.Matrix4().getInverse( camera.projectionMatrix );
+
 				material.uniforms.debugCamera.value = config.camera !== 'GLSL';
 				material.uniforms.cameraPos.value = camera.getWorldPosition();
 				material.uniforms.cameraDir.value = camera.getWorldDirection();
