レイマーチング用のPlaneの視錐台カリングを無効化(kanetaさんに感謝)

--- a/raymarching_hybrid.html
+++ b/raymarching_hybrid.html
@@ -481,6 +481,7 @@ void main(void) {
 					fragmentShader: document.getElementById( 'fragment_shader' ).textContent
 				} );
 				plane = new THREE.Mesh( geometry, material );
+				plane.frustumCulled = false;
 				plane.position.z = -1;
 				scene.add( plane );
 
