hybrid の time が設定されていないバグを修正

--- a/raymarching_hybrid.html
+++ b/raymarching_hybrid.html
@@ -606,10 +606,10 @@ void main(void) {
 
 			}
 
-			function animate() {
+			function animate( timestamp ) {
 
 				requestAnimationFrame( animate );
-				render();
+				render( timestamp );
 
 			}
 
