--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -169,10 +169,11 @@ Intersect minIntersect( Intersect a, Intersect b ) {
 
 float sceneDist( vec3 p ) {
 
-	return min(
-		sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.5),
-		floorDist( p )
-	);
+	//return min(
+	//	sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.5),
+	//	floorDist( p )
+	//);
+	return sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.5);
 
 }
 
@@ -185,7 +186,8 @@ Intersect sceneIntersect( vec3 p ) {
 	b.distance = floorDist( p );
 	b.material = FLOOR_MATERIAL;
 
-	return minIntersect( a, b );
+	//return minIntersect( a, b );
+	return a;
 }
 
 vec3 getNormal( vec3 p ) {
@@ -281,7 +283,7 @@ float getShadow( vec3 ro, vec3 rd ) {
 Intersect getRayColor( vec3 origin, vec3 ray ) {
 
 	// marching loop
-	float dist;
+	float dist, minDist = 9999.0;
 	float depth = 0.0;
 	vec3 p = origin;
 	int count = 0;
@@ -290,6 +292,7 @@ Intersect getRayColor( vec3 origin, vec3 ray ) {
 	for ( int i = 0; i < 128; i++ ){
 
 		dist = sceneDist( p );
+		minDist = min(dist, minDist);
 		depth += dist;
 		p = origin + depth * ray;
 
@@ -297,6 +300,8 @@ Intersect getRayColor( vec3 origin, vec3 ray ) {
 		if ( abs(dist) < EPS ) break;
 
 	}
+
+	vec3 psyllium_color = vec3( 1.0, 0.2, 0.2 );
 
 	if ( abs(dist) < EPS ) {
 
@@ -312,7 +317,7 @@ Intersect getRayColor( vec3 origin, vec3 ray ) {
 			
 		} else if ( nearest.material == PSYLLIUM_MATERIAL ) {
 
-			vec3 color = vec3( 1.0, 0.2, 0.2 );
+			vec3 color = psyllium_color;
 			nearest.color = color;
 
 		}
@@ -321,7 +326,7 @@ Intersect getRayColor( vec3 origin, vec3 ray ) {
 
 	} else {
 
-		nearest.color = vec3( 0.2 );
+		nearest.color = psyllium_color * clamp(1.0 / pow(minDist, 1.2), 0.0, 1.0);
 		nearest.isHit = false;
 
 	}
