--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -173,14 +173,14 @@ float sceneDist( vec3 p ) {
 	//	sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.5),
 	//	floorDist( p )
 	//);
-	return sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.5);
+	return sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.2);
 
 }
 
 Intersect sceneIntersect( vec3 p ) {
 
 	Intersect a, b;
-	a.distance = sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.5);
+	a.distance = sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.2);
 	a.material = PSYLLIUM_MATERIAL;
 
 	b.distance = floorDist( p );
@@ -326,12 +326,12 @@ Intersect getRayColor( vec3 origin, vec3 ray ) {
 
 	} else {
 
-		nearest.color = psyllium_color * clamp(1.0 / pow(minDist, 1.2), 0.0, 1.0);
+		nearest.color = psyllium_color * clamp(0.5 / minDist, 0.0, 1.0);
 		nearest.isHit = false;
 
 	}
  	
-	nearest.color += pow( clamp( 0.005 * depth, 0.0, 0.6 ), 2.0 );
+	//nearest.color -= pow( clamp( 0.00001 * depth, 0.0, 0.5 ), 2.0 );
 	nearest.position = p;
 	nearest.distance = depth;
 	return nearest;
