--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -167,20 +167,33 @@ Intersect minIntersect( Intersect a, Intersect b ) {
 
 }
 
+float rand(vec2 co){
+	return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
+}
+
 float sceneDist( vec3 p ) {
 
 	//return min(
 	//	sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.5),
 	//	floorDist( p )
 	//);
-	return sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.2);
+	float r = 4.0;
+	float t = 8.0 * time + floor( ( p.x + p.z + 7.5 ) / 15.0 );
+	vec3 org = vec3( 0.0, cos( t ), 0.0);
+	vec3 dir = vec3( 0.0, 2.0, cos( t ) );
+	return sdCapsule( onRep( p, 15.0) , org, org + r * normalize( dir ), 0.2 );
 
 }
 
 Intersect sceneIntersect( vec3 p ) {
 
 	Intersect a, b;
-	a.distance = sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.2);
+
+	float r = 4.0;
+	float t = 8.0 * time + floor( ( p.x + p.z + 7.5 ) / 15.0 );
+	vec3 org = vec3( 0.0, cos( t ), 0.0);
+	vec3 dir = vec3( 0.0, 2.0, cos( t ) );
+	a.distance = sdCapsule( onRep( p, 15.0) , org, org + r * normalize( dir ), 0.2 );
 	a.material = PSYLLIUM_MATERIAL;
 
 	b.distance = floorDist( p );
