--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -74,6 +74,7 @@ uniform float objY;
 const float EPS = 0.0001;
 const float OFFSET = EPS * 2000.0;
 const float PI = 3.14159;
+const float GRID = 15.0;
 
 
 // globals
@@ -130,6 +131,11 @@ float sdCapsule( vec3 p, vec3 a, vec3 b, float r )
     return length( pa - ba*h ) - r;
 }
 
+// utils
+float getDiscreteGrid( vec2 p ) {
+
+	return floor( ( p.x + p.y + GRID / 2.0 ) / GRID );
+}
 
 // color functions
 vec3 hsv2rgb( vec3 c ) {
@@ -178,10 +184,10 @@ float sceneDist( vec3 p ) {
 	//	floorDist( p )
 	//);
 	float r = 4.0;
-	float t = 8.0 * time + floor( ( p.x + p.z + 7.5 ) / 15.0 );
+	float t = 8.0 * time + getDiscreteGrid( p.xz );
 	vec3 org = vec3( 0.0, cos( t ), 0.0);
-	vec3 dir = vec3( 0.0, 2.0, cos( t ) );
-	return sdCapsule( onRep( p, 15.0) , org, org + r * normalize( dir ), 0.2 );
+	vec3 dir = vec3( cos( t ), 2.0, cos( t ) );
+	return sdCapsule( onRep( p, GRID) , org, org + r * normalize( dir ), 0.2 );
 
 }
 
@@ -190,10 +196,10 @@ Intersect sceneIntersect( vec3 p ) {
 	Intersect a, b;
 
 	float r = 4.0;
-	float t = 8.0 * time + floor( ( p.x + p.z + 7.5 ) / 15.0 );
+	float t = 8.0 * time + getDiscreteGrid( p.xz );
 	vec3 org = vec3( 0.0, cos( t ), 0.0);
-	vec3 dir = vec3( 0.0, 2.0, cos( t ) );
-	a.distance = sdCapsule( onRep( p, 15.0) , org, org + r * normalize( dir ), 0.2 );
+	vec3 dir = vec3( cos( t ), 2.0, cos( t ) );
+	a.distance = sdCapsule( onRep( p, GRID) , org, org + r * normalize( dir ), 0.2 );
 	a.material = PSYLLIUM_MATERIAL;
 
 	b.distance = floorDist( p );
