--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -105,6 +105,18 @@ vec3 onRep( vec3 p, float interval ) {
 
 }
 
+// https://www.shadertoy.com/view/4tX3DS
+vec2 fold(in vec2 p, in float a)
+{
+	p.x = abs(p.x);
+	vec2 v = vec2(cos(a), sin(a));
+	for(int i = 0; i < 5; i++){
+		p -= 2.0 * min(0.0, dot(p, v)) * v;
+		v = normalize(vec2(v.x - 1.0, v.y));
+	}
+	return p;    
+}
+
 float sphereDist( vec3 p, float r ) {
 
 	vec3 c = vec3( 0.0, objY, 0.0 );
@@ -134,7 +146,8 @@ float sdCapsule( vec3 p, vec3 a, vec3 b, float r )
 // utils
 float getDiscreteGrid( vec2 p ) {
 
-	return floor( ( p.x + p.y + GRID / 2.0 ) / GRID );
+	return 0.0;
+	//return floor( ( p.x + p.y + GRID / 2.0 ) / GRID );
 }
 
 // color functions
@@ -177,17 +190,35 @@ float rand(vec2 co){
 	return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
 }
 
+mat2 rotate(float a)
+{
+	return mat2(cos(a), sin(a), -sin(a), cos(a));
+}
+
 float sceneDist( vec3 p ) {
 
 	//return min(
 	//	sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.5),
 	//	floorDist( p )
 	//);
+
+    p.yz *= rotate(time * 0.1);
+    p.zx *= rotate(time * 0.05);
+	p.xy = fold(p.xy, PI / 2.0);
+	p.z = abs(p.z) - 0.5 * 20.0;
+	p.z = abs(p.z) - 0.8 * 20.0;
+	p.z = abs(p.z) - 0.7 * 20.0;
+	p.z = abs(p.z) - 0.5 * 20.0;
+	p.z += sin(length(p.xy) * 1.5 + time * 2.0) * 0.15 * 20.0;
+	p.y += time * 0.5 * 20.0;
+	p.y = mod(p.y, 0.4 * 20.0) - 0.2 * 20.0;
+
 	float r = 4.0;
 	float t = 8.0 * time + getDiscreteGrid( p.xz );
 	vec3 org = vec3( 0.0, cos( t ), 0.0);
 	vec3 dir = vec3( cos( t ), 2.0, cos( t ) );
-	return sdCapsule( onRep( p, GRID) , org, org + r * normalize( dir ), 0.2 );
+
+	return sdCapsule( p, org, org + r * normalize( dir ), 0.2 );
 
 }
 
@@ -195,11 +226,23 @@ Intersect sceneIntersect( vec3 p ) {
 
 	Intersect a, b;
 
+    p.yz *= rotate(time * 0.1);
+    p.zx *= rotate(time * 0.05);
+	p.xy = fold(p.xy, PI / 2.0);
+	p.z = abs(p.z) - 0.5 * 20.0;
+	p.z = abs(p.z) - 0.8 * 20.0;
+	p.z = abs(p.z) - 0.7 * 20.0;
+	p.z = abs(p.z) - 0.5 * 20.0;
+	p.z += sin(length(p.xy) * 1.5 + time * 2.0) * 0.15 * 20.0;
+	p.y += time * 0.5 * 20.0;
+	p.y = mod(p.y, 0.4 * 20.0) - 0.2 * 20.0;
+
 	float r = 4.0;
 	float t = 8.0 * time + getDiscreteGrid( p.xz );
 	vec3 org = vec3( 0.0, cos( t ), 0.0);
 	vec3 dir = vec3( cos( t ), 2.0, cos( t ) );
-	a.distance = sdCapsule( onRep( p, GRID) , org, org + r * normalize( dir ), 0.2 );
+
+	a.distance = sdCapsule( p, org, org + r * normalize( dir ), 0.2 );
 	a.material = PSYLLIUM_MATERIAL;
 
 	b.distance = floorDist( p );
