--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -137,6 +137,10 @@ float getDiscreteGrid( vec2 p ) {
 	return floor( ( p.x + p.y + GRID / 2.0 ) / GRID );
 }
 
+vec2 getDiscreteGridVec2( vec2 p ) {
+	return floor(p / GRID);
+}
+
 // color functions
 vec3 hsv2rgb( vec3 c ) {
 
@@ -184,8 +188,9 @@ float sceneDist( vec3 p ) {
 	//	floorDist( p )
 	//);
 	float r = 4.0;
-	float t = 8.0 * time + getDiscreteGrid( p.xz );
-	vec3 org = vec3( 0.0, cos( t ), 0.0);
+	float t = 8.0 * time;
+	float x = rand(getDiscreteGridVec2(p.xz)) * 10.0 - 5.0;
+	vec3 org = vec3( x, x, 0.0);
 	vec3 dir = vec3( cos( t ), 2.0, cos( t ) );
 	return sdCapsule( onRep( p, GRID) , org, org + r * normalize( dir ), 0.2 );
 
@@ -196,9 +201,11 @@ Intersect sceneIntersect( vec3 p ) {
 	Intersect a, b;
 
 	float r = 4.0;
-	float t = 8.0 * time + getDiscreteGrid( p.xz );
-	vec3 org = vec3( 0.0, cos( t ), 0.0);
+	float t = 8.0 * time;
+	float x = rand(getDiscreteGridVec2(p.xz)) * 5.0;
+	vec3 org = vec3( x, x, 0.0);
 	vec3 dir = vec3( cos( t ), 2.0, cos( t ) );
+
 	a.distance = sdCapsule( onRep( p, GRID) , org, org + r * normalize( dir ), 0.2 );
 	a.material = PSYLLIUM_MATERIAL;
 
