--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -181,18 +181,21 @@ float rand(vec2 co){
 	return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
 }
 
-float sceneDist( vec3 p ) {
-
-	//return min(
-	//	sdCapsule( onRep( p, 15.0) , vec3(0.0, 0.0, 0.0), vec3(0.0, 4.0, 0.0), 0.5),
-	//	floorDist( p )
-	//);
+float psylliumDist( vec3 p ) {
 	float r = 4.0;
 	float t = 8.0 * time;
 	float x = rand(getDiscreteGridVec2(p.xz)) * 10.0 - 5.0;
 	vec3 org = vec3( x, x, 0.0);
 	vec3 dir = vec3( cos( t ), 2.0, cos( t ) );
 	return sdCapsule( onRep( p, GRID) , org, org + r * normalize( dir ), 0.2 );
+}
+
+float sceneDist( vec3 p ) {
+
+	return min(
+		sdCappedCylinder( onRep( p, 50.0) , vec2( 3.0, 20.0 ) ),
+		floorDist( p )
+	);
 
 }
 
@@ -200,20 +203,13 @@ Intersect sceneIntersect( vec3 p ) {
 
 	Intersect a, b;
 
-	float r = 4.0;
-	float t = 8.0 * time;
-	float x = rand(getDiscreteGridVec2(p.xz)) * 5.0;
-	vec3 org = vec3( x, x, 0.0);
-	vec3 dir = vec3( cos( t ), 2.0, cos( t ) );
-
-	a.distance = sdCapsule( onRep( p, GRID) , org, org + r * normalize( dir ), 0.2 );
-	a.material = PSYLLIUM_MATERIAL;
+	a.distance = sdCappedCylinder( onRep( p, 50.0) , vec2( 3.0, 20.0 ) );
+	a.material = MIRROR_MATERIAL;
 
 	b.distance = floorDist( p );
 	b.material = FLOOR_MATERIAL;
 
-	//return minIntersect( a, b );
-	return a;
+	return minIntersect( a, b );
 }
 
 vec3 getNormal( vec3 p ) {
@@ -345,6 +341,11 @@ Intersect getRayColor( vec3 origin, vec3 ray ) {
 		} else if ( nearest.material == PSYLLIUM_MATERIAL ) {
 
 			nearest.color = psylliumColor;
+
+		} else if ( nearest.material == MIRROR_MATERIAL ) {
+
+			vec3 color = vec3( 1.0, 0.2, 0.2 );
+			nearest.color = color * diffuse * shadow + specular;
 
 		}
 
