--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -214,7 +214,7 @@ float psylliumDist( vec3 p ) {
 	float x = rand(getDiscreteGridVec2(p.xz)) * 10.0 - 5.0;
 	vec3 org = vec3( 0.0, 0.0, 0.0);
 	vec3 dir = vec3( 0.0, 1.0, 0.0 );
-	return sdCappedCylinder(rotate( onRep( p, GRID ), sin ( t ), vec3( 1.0, 0.1, 1.0 )), vec2( 0.3, 4.0 ) );
+	return sdCapsule(rotate( onRep( p, GRID ), sin ( t ), vec3( 1.0, 0.1, 1.0 )) , org, org + r * normalize( dir ), 0.2 );
 }
 
 float sceneDist( vec3 p ) {
