--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -74,7 +74,7 @@ uniform float objY;
 const float EPS = 0.0001;
 const float OFFSET = EPS * 2000.0;
 const float PI = 3.14159;
-const float GRID = 15.0;
+const float GRID = 12.0;
 
 
 // globals
@@ -189,9 +189,9 @@ float rand(vec2 co){
 float psylliumDist( vec3 p ) {
 	float r = 4.0;
 	float t = 8.0 * time;
-	float x = rand(getDiscreteGridVec2(p.xz)) * 10.0 - 5.0;
+	float x = rand(getDiscreteGridVec2(p.xz)) * -8.0 + 4.0;
 	vec3 org = vec3( x, -10.0, x);
-	vec3 dir = vec3( cos( t ), 2.0, cos( t ) );
+	vec3 dir = vec3( cos( t ), 2.0, -2.0 + cos( t ) );
 	return sdCapsule( onRep( p, GRID) , org, org + r * normalize( dir ), 0.2 );
 }
 
