--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -105,9 +105,8 @@ vec3 onRep( vec3 p, float interval ) {
 
 }
 
-float sphereDist( vec3 p, float r ) {
+float sphereDist( vec3 p, vec3 c, float r ) {
 
-	vec3 c = vec3( 0.0, objY, 0.0 );
 	return length( p - c ) - r;
 
 }
@@ -182,6 +181,16 @@ Intersect minIntersect( Intersect a, Intersect b ) {
 
 }
 
+Intersect maxIntersect( Intersect a, Intersect b ) {
+
+	if ( a.distance > b.distance ) {
+		return a;
+	} else {
+		return b;
+	}
+
+}
+
 float rand(vec2 co){
 	return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
 }
@@ -197,9 +206,9 @@ float psylliumDist( vec3 p ) {
 
 float sceneDist( vec3 p ) {
 
-	return min(
-		sdCappedCylinder( onRep( p, 50.0) , vec2( 3.0, 20.0 ) ),
-		udRoundBox( p + vec3( 0.0, 1.0, 0.0 ), vec3( 20.0, 1.0, 20.0 ), 0.1 )
+	return max(
+		sphereDist( p, vec3( 0.0, 0.0, 0.0 ), 10.0 ),
+		udRoundBox( p + vec3( 0.0, 20.0, 0.0 ), vec3( 20.0, 20.0, 20.0 ), 0.1 )
 	);
 
 }
@@ -208,11 +217,11 @@ Intersect sceneIntersect( vec3 p ) {
 
 	Intersect a, b;
 
-	a.distance = sdCappedCylinder( onRep( p, 50.0) , vec2( 3.0, 20.0 ) );
-	a.material = MIRROR_MATERIAL;
+	a.distance = sphereDist( p, vec3( 0.0, 0.0, 0.0 ), 10.0 );
+	a.material = FLOOR_MATERIAL;
 
 	b.distance = udRoundBox( p + vec3( 0.0, 1.0, 0.0 ), vec3( 20.0, 1.0, 20.0 ), 0.1 );
-	b.material = FLOOR_MATERIAL;
+	b.material = MIRROR_MATERIAL;
 
 	return minIntersect( a, b );
 }
